--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: sora;
     color: #000000;
@@ -152,7 +156,7 @@ nav ul li a::after {
 }
 
 .mt-10 {
-    margin-top: 10px !important;
+    margin-top: 20px !important;
 }
 
 .mb-120 {
