--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,6 +125,7 @@ nav ul li a::after {
     background-color: #000000;
     border-radius: 4px;
     display: flex;
+    align-items: center;
     gap: 8px;
     text-decoration: none;
     font-size: 20px;
@@ -140,6 +141,31 @@ nav ul li a::after {
 .btn:hover {
     background-color: #ffffff;
     color: #000000;
+    outline: 3px solid #0ea5e9;
+}
+
+.btn2 {
+    padding: 13px 17px;
+    background-color: #0ea5e9;
+    border-radius: 6px;
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    text-decoration: none;
+    font-size: 16px;
+    border: none;
+    color: #000000;
+    font-weight: 600;
+    transition: all 0.3s ease-in-out;
+    outline: 3px solid #0ea5e9;
+    cursor: pointer;
+    z-index: 2;
+    width: fit-content;
+}
+
+.btn2:hover {
+    background-color: transparent;
+    color: #ffffff;
     outline: 3px solid #0ea5e9;
 }
 
@@ -314,14 +340,6 @@ nav ul li a::after {
     background-color: #27272A;
 }
 
-
-.check {
-    color: #ffffff;
-}
-
-.check:hover {
-    color: #0ea5e9;
-}
 
 .dark {
     color: #71717A;
