--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,10 @@ html {
     scroll-behavior: smooth;
 }
 
+.blue {
+    color: #0ea5e9;
+}
+
 body {
     font-family: sora;
     color: #000000;
@@ -105,13 +109,16 @@ nav ul li a {
 
 nav ul li a:hover::after {
     width: 100%;
+    right: auto;
+    left: 0;
 }
 
 nav ul li a::after {
     content: "";
     position: absolute;
     bottom: -10px;
-    left: 0;
+    left: auto;
+    right: 0;
     width: 0%;
     height: 3px;
     background-color: #0ea5e9;
@@ -356,15 +363,16 @@ nav ul li a::after {
     align-items: center;
     justify-content: center;
     padding: 40px;
-    box-shadow: 0 6px 8px rgba(24, 39, 75, 0.08);
+    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
     border-radius: 20px;
     text-align: center;
     transition: all 0.3s ease-in-out;
     flex: 1;
+    cursor: pointer;
 }
 
 .box2:hover {
-    box-shadow: 0 6px 16px rgba(24, 39, 75, 0.3);
+    box-shadow: 0 6px 16px #0ea5e9;
 }
 
 .line2 {
@@ -377,7 +385,8 @@ nav ul li a::after {
     width: 50%;
 }
 
-input {
+input[type='text'],
+input[type='email'] {
     padding: 18px 24px;
     width: 100%;
     box-sizing: border-box;
@@ -385,6 +394,7 @@ input {
     margin-bottom: 30px;
     border: none;
     outline: 3px solid #71717A;
+    font-family: sora;
 }
 
 input:focus {
@@ -397,7 +407,21 @@ input::placeholder {
 }
 
 .msg {
-    padding-bottom: 200px;
+    padding: 18px 24px 200px 24px;
+    width: 100%;
+    border: none;
+    outline: 3px solid #71717A;
+    box-sizing: border-box;
+    resize: none;
+    border-radius: 6px;
+    overflow: hidden;
+    margin-bottom: 30px;
+    font-family: sora;
+}
+
+.msg:focus {
+    outline: 3px solid #0ea5e9;
+    border: none;
 }
 
 footer {
